2003-09-28  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/midi-stream.cc (operator <<): Also write MIDI string when
	midi_debug_global_b.
	(operator <<): Normalise loop.

2003-09-27  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scripts/lilypond.py (escape_path): revise.

	* scm/music-functions.scm (set-output-property): new function.
	
2003-09-27  Jan Nieuwenhuizen  <janneke@gnu.org>

	* cygwin/mknetrel: Next try in building doc on Cygwin natively;
	use addmakeflags again.

	* cygwin/lily-wins.py (escape_shell): New function; use it.

	* scripts/lilypond.py (escape_shell): Escape quotes and other
	spaces too.  Do not escape escaping backslashes.

	* make/srcdir.make.in (web-install): Must call install-WWW now.

	* mf/GNUmakefile: resolve conflict: %list.ly is a target, not a
	dependency

2003-09-27  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scripts/lilypond.py (escape_path): escape quotes too. 

	* Documentation/user/lilypond.tely (Unified index): rename Index
	to accomodate Windows breakage.

	* make/lilypond.redhat.spec.in (Group): remove out=www for web-install 

	* mf/GNUmakefile ($(outdir)/%.afm  $(outdir)/%.enc
	$(outdir)/%.tex $(outdir)/%.dep $(outdir)/%list.ly): list.ly is a
	target not a source.

2003-09-27  Jan Nieuwenhuizen  <janneke@gnu.org>

	* cygwin/mknetrel: Use EXTRABUILDARGS, EXTRAINSTALLARGS instead of
	addmakeflags.  Build and install doc and web also when building on
	Cygwin.

	* mf/GNUmakefile: Bugfix.

	* GNUmakefile.in (web-install): Bugfix: set out prefix Similar to
	target web.

	* cygwin/lily-wins.py: Quote filename.

2003-09-26  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* mf/GNUmakefile ($(outdir)/$(redhat-package)): use passive ftp.

2003-09-25  Jan Nieuwenhuizen  <janneke@gnu.org>

	* cygwin/bug-lilypond-cygwin.sh: Add tests for registry
	settings.

	* configure.in: Require g++ > 3.0.4.

	* mf/GNUmakefile: Bugfix: Add list.ly target.
	
	* Documentation/user/GNUmakefile: Bugfix: list.ly target.
