@@ -1,3 +1,11 @@
+2003-09-28  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
+
+	* ly/property-init.ly (arpeggioBracket): simplify
+
+	* lily/translator-group.cc (execute_pushpop_property): use
+	SCM_EQ_P for comparing keys. This fixes reverting
+	auto-beam-settings.
+
 2003-09-28  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* lily/midi-stream.cc (operator <<): Also write MIDI string when
